--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,9 @@ dependencies {
     // commons lang
     implementation 'org.apache.commons:commons-lang3:3.7'
 
+    // navigation
+    implementation 'androidx.navigation:navigation-compose:2.6.0-alpha03'
+
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
