--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,14 +71,14 @@ dependencies {
     implementation 'androidx.camera:camera-core:1.1.0'
     implementation "androidx.camera:camera-camera2:1.1.0"
     implementation "androidx.camera:camera-lifecycle:1.1.0"
-    implementation "androidx.camera:camera-view:1.2.0-rc01"
+    implementation "androidx.camera:camera-view:1.3.0-alpha01"
 
     // Google ZXing
     implementation 'com.google.zxing:core:3.3.3'
 
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation "androidx.compose.material:material:1.3.0"
+    implementation "androidx.compose.material:material:1.3.1"
 
     // DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
@@ -93,7 +93,16 @@ dependencies {
     implementation 'org.apache.commons:commons-lang3:3.7'
 
     // navigation
-    implementation 'androidx.navigation:navigation-compose:2.6.0-alpha03'
+    implementation 'androidx.navigation:navigation-compose:2.6.0-alpha04'
+
+    // chart
+    implementation "com.github.PhilJay:MPAndroidChart:v3.1.0"
+
+    // Progress Button
+    implementation 'com.github.SimformSolutionsPvtLtd:SSJetPackComposeProgressButton:1.0.7'
+
+    // accompanist
+    implementation "com.google.accompanist:accompanist-drawablepainter:0.16.0"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
