--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id "com.android.application"
 //    id "org.jetbrains.kotlin.android"
-    id 'kotlin-android'
-    id 'kotlin-android-extensions'
+    id "kotlin-android"
+    id "kotlin-android-extensions"
 }
 
 android {
@@ -16,16 +16,23 @@ android {
         versionCode 1
         versionName "1.0"
 
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
+        }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
         }
     }
 
-    buildFeatures {
-        viewBinding true
+    androidResources {
+        noCompress 'tflite'
     }
-
+    buildFeatures {
+        compose true
+        viewBinding true
+        mlModelBinding true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -39,10 +46,6 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
-    buildFeatures {
-        compose true
-        mlModelBinding true
-    }
     composeOptions {
         kotlinCompilerExtensionVersion "1.2.0"
     }
@@ -51,7 +54,7 @@ android {
             excludes += "/META-INF/{AL2.0,LGPL2.1}"
         }
     }
-    buildToolsVersion '31.0.0'
+    buildToolsVersion "31.0.0"
 }
 
 dependencies {
@@ -60,7 +63,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
 
     // app compat
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation "androidx.appcompat:appcompat:1.5.1"
 
     // Compose Activity
     implementation "androidx.activity:activity-compose:1.6.1"
@@ -69,13 +72,13 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
     // CameraX
-    implementation 'androidx.camera:camera-core:1.1.0'
+    implementation "androidx.camera:camera-core:1.1.0"
     implementation "androidx.camera:camera-camera2:1.1.0"
     implementation "androidx.camera:camera-lifecycle:1.1.0"
     implementation "androidx.camera:camera-view:1.3.0-alpha01"
 
     // Google ZXing
-    implementation 'com.google.zxing:core:3.3.3'
+    implementation "com.google.zxing:core:3.3.3"
 
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
@@ -85,34 +88,41 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     // reactive x
-    implementation 'io.reactivex:rxandroid:1.2.1'
-    implementation 'io.reactivex:rxjava:1.3.0'
+    implementation "io.reactivex:rxandroid:1.2.1"
+    implementation "io.reactivex:rxjava:1.3.0"
 
-    implementation 'com.polidea.rxandroidble:rxandroidble:1.2.2'
+    implementation "com.polidea.rxandroidble:rxandroidble:1.2.2"
 
     // commons lang
-    implementation 'org.apache.commons:commons-lang3:3.7'
+    implementation "org.apache.commons:commons-lang3:3.7"
 
     // navigation
-    implementation 'androidx.navigation:navigation-compose:2.6.0-alpha04'
+    implementation "androidx.navigation:navigation-compose:2.6.0-alpha04"
 
     // chart
     implementation "com.github.PhilJay:MPAndroidChart:v3.1.0"
 
     // Progress Button
-    implementation 'com.github.SimformSolutionsPvtLtd:SSJetPackComposeProgressButton:1.0.7'
+    implementation "com.github.SimformSolutionsPvtLtd:SSJetPackComposeProgressButton:1.0.7"
 
     // accompanist
     implementation "com.google.accompanist:accompanist-drawablepainter:0.16.0"
 
+    // tensorflow
+    implementation 'org.tensorflow:tensorflow-lite:2.7.0'
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.3.0'
+    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.3.0'
+    implementation 'org.tensorflow:tensorflow-lite-task-text:0.3.0'
+    implementation 'org.tensorflow:tensorflow-lite-task-audio:0.3.0'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.3.0'
+    implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:0.0.0-nightly-SNAPSHOT'
+    implementation "org.tensorflow:tensorflow-lite:0.0.0-nightly"
+
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.android.gms:play-services-vision-common:19.1.3'
-    implementation 'com.google.android.gms:play-services-vision:20.1.3'
-    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0'
-    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0'
-    implementation 'org.tensorflow:tensorflow-lite-gpu:2.3.0'
+    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
+    implementation "com.google.android.gms:play-services-vision-common:19.1.3"
+    implementation "com.google.android.gms:play-services-vision:20.1.3"
 
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.4"
