--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id "com.android.application"
-//    id "org.jetbrains.kotlin.android"
+    id "org.jetbrains.kotlin.android"
     id "kotlin-android"
     id "kotlin-android-extensions"
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -117,6 +118,18 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-support:0.3.0'
     implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:0.0.0-nightly-SNAPSHOT'
     implementation "org.tensorflow:tensorflow-lite:0.0.0-nightly"
+
+    // Login
+    implementation platform('com.google.firebase:firebase-bom:31.0.2')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-firestore-ktx'
+    implementation 'com.google.firebase:firebase-common-ktx:20. 1.0'
+
+    // Compose Material
+    implementation 'androidx.compose.material:material:1.1.1'
+    implementation("androidx.compose.material3:material3:1.0.1")
+    implementation("androidx.compose.material3:material3-window-size-class:1.0.1")
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
