--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     // Compose Activity
     implementation "androidx.activity:activity-compose:1.6.1"
 
+    // Compose Lifecycle
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha03'
+
     // Compose Layout
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
@@ -136,6 +139,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation "com.google.android.gms:play-services-vision-common:19.1.3"
     implementation "com.google.android.gms:play-services-vision:20.1.3"
+
 
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.4"
