--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 plugins {
     id "com.android.application"
+    id 'com.google.gms.google-services'
     id "org.jetbrains.kotlin.android"
     id "kotlin-android"
     id "kotlin-android-extensions"
-    id 'com.google.gms.google-services'
-    id 'kotlin-kapt'
 }
+apply plugin: 'kotlin-kapt'
 
 android {
     namespace "pdiot.v.polarbear"
@@ -25,6 +25,12 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+//        javaCompileOptions {
+//            annotationProcessorOptions {
+//                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
+//            }
+//        }
     }
 
     androidResources {
@@ -136,15 +142,15 @@ dependencies {
     implementation("androidx.compose.material3:material3-window-size-class:1.0.1")
 
     // Room
-    def room_version = "2.4.3"
+    def room_version = "2.4.2"
 
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
     // To use Kotlin annotation processing tool (kapt)
     kapt "androidx.room:room-compiler:$room_version"
-    // To use Kotlin Symbol Processing (KSP)
-    annotationProcessor "androidx.room:room-compiler:$room_version"
 
     // optional - RxJava2 support for Room
     implementation "androidx.room:room-rxjava2:$room_version"
@@ -159,7 +165,7 @@ dependencies {
     testImplementation "androidx.room:room-testing:$room_version"
 
     // optional - Paging 3 Integration
-    implementation "androidx.room:room-paging:2.5.0-beta01"
+    implementation "androidx.room:room-paging:$room_version"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
